--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://vishalkanna:p9PnqAPhLN4X8vWU@student.7w5wmpo.mongodb.net/?retryWrites=true&w=majority&appName=student
+      uri: mongodb+srv://vishalkanna:<password>@student.7w5wmpo.mongodb.net/?retryWrites=true&w=majority&appName=student
       database: studentDb
